format & fix for lint error

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,4 +2,13 @@
   "[typescript]": {
     "editor.defaultFormatter": "biomejs.biome"
   },
+  "[javascript]": {
+    "editor.defaultFormatter": "biomejs.biome"
+  },
+  "[typescriptreact]": {
+    "editor.defaultFormatter": "biomejs.biome"
+  },
+  "cSpell.words": [
+    "biomejs"
+  ],
 }
