--- a/biome.json
+++ b/biome.json
@@ -4,7 +4,10 @@
     "enabled": true
   },
   "files": {
-    "ignore": ["node_modules", ".next"]
+    "ignore": [
+      "node_modules",
+      ".next"
+    ]
   },
   "formatter": {
     "enabled": true,
